--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <title>Practica 1</title>
   
 </head>
-<body>
+<body bgcolor="#EAEDED">
   <h2><center>Hola mundo</center></h2>
   <br>
   <br>
-  <p><font color="#1A5276">Isabel Herrera Mota</font></p>
+  <p><font color="#1A5276">Primera página de Isabel Herrera Mota</font></p>
 </body>
