--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
   <h2><center>Hola mundo</center></h2>
   <br>
   <br>
-  <p><font color="#1A5276">Primera página de Isabel Herrera Mota</font></p>
+  <p><font size="10" color="#1A5276">Primera página de Isabel Herrera Mota</font></p>
 </body>
